syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sebastianDev";
option java_outer_classname = "AvailabilityGrpcProto";

package availability;

import "google/protobuf/timestamp.proto";

// =======================================
// Servi√ßo gRPC do Hotel
// =======================================
service AvailabilityService {
  rpc CheckRoomAvailability(CheckRoomAvailabilityRequest) returns (RoomAvailabilityResponse);
}

// =======================================
// Mensagens de Request e Response
// =======================================
message CheckRoomAvailabilityRequest {
  string room_id = 1;
  google.protobuf.Timestamp check_in_date = 2;
  google.protobuf.Timestamp check_out_date = 3;
}

message RoomAvailabilityResponse {
  bool is_available = 1;
  string message = 2;
}
